--- a/_config.yml
+++ b/_config.yml
@@ -104,8 +104,8 @@ analytics:
 author:
   name             : "Joseph Park"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "prospective iOS Developer."
-  location         : "Melbourne, Australia"
+  bio              : "iOS Developer."
+  location         : "Sydney, Australia"
   email            : "joepark0098@gmail.com"
   links:
     - label: "Email"
